Remove authorHandle
