# api/models/discussion.js
@@ -40,8 +40,7 @@ module.exports = function(sequelize, DataTypes) {
       get: function() {
         return parseInt(this.getDataValue('authorId'));
       }
-    },
-    authorHandle: DataTypes.STRING(128)
+    }
   }, {
     tableName: 'discussions',
     associate : function(models) {
