# lib/controllerHelper.js
@@ -300,6 +300,9 @@ function createEntity(model, referenceModels, options, req, funcCallback) {
       // set createdBy and updatedBy user
       data.createdBy = routeHelper.getSigninUser(req).id;
       data.updatedBy = routeHelper.getSigninUser(req).id;
+      if (req.param('useCurrentUserAsAuthor')) {
+        data.authorId = routeHelper.getSigninUser(req).id;
+      }
       // add foreign keys
       _.extend(data, filters.where);
       model.create(data).success(function(entity) {
